Slow DCKmeans in CPP

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,23 @@
 *.data
 *.txt
 *.png
-gitignore
+*.gitignore*
+*.xml
+*.json
+*.iml
+*cpython-*
+*DS_Store*
+*.plist
+dckmeans
+algo_utils
+kmeans
+dckm_utils
+test.cpp
+exp.cpp
+src/main/main
+IOutils
+test
+*.pyc
+dictionaries
+/base/__pycache__/*
+
